[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors=["Gabriel Venberg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="template"
path="src/template/solve.rs"

[[bin]]
name="day01"
path="src/day01/solve.rs"

[[bin]]
name="day02"
path="src/day02/solve.rs"

[[bin]]
name="day03"
path="src/day03/solve.rs"

[[bin]]
name="day04"
path="src/day04/solve.rs"

[[bin]]
name="day05"
path="src/day05/solve.rs"

[[bin]]
name="day06"
path="src/day06/solve.rs"

[[bin]]
name="day07"
path="src/day07/solve.rs"

[[bin]]
name="day08"
path="src/day08/solve.rs"

[dependencies]
regex="1"
once_cell = "1.16"
nom = "7.1"
thiserror = "1.0"
