[workspace]
members = [
	"template",
	"days/*",
]
default-members = [ "days/*" ]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Gabriel Venberg"]
edition = "2021"
description = "advent of code 2022 in rust"

[workspace.dependencies]
regex = "1"
once_cell = "1.16"
thiserror = "1.0"
nom = "7.1"
